<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/toolbarName"
        android:background="@color/green"
        android:layout_marginBottom="15dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputSurnameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputSurname"
        android:gravity="center"/>

    <EditText
        android:id="@+id/inputNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputName"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/inputPhoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputNumber"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveData"
        android:layout_margin="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        tools:listitem="@layout/list_item"/>

</LinearLayout>